--- a/SPMG-FrontEnd/HTML/PagLogin.html
+++ b/SPMG-FrontEnd/HTML/PagLogin.html
@@ -7,17 +7,45 @@
     <link rel='stylesheet' href='css/style.css'>
     <title>Login</title>
 </head>
-<header id="login cabecalhoLog">
-    <div class="container ">
+
+<header>
+    <div class="container cabecalho">
         <div class="voltar">
-            <a href="#">voltar</a>
+            <a href="Index.html">Voltar</a>
         </div>
-        <div class="titleLog logoLogin">
+        <div class="title">
             <a href="#" class="link-title"><img class="imagem-header" src="images/Logo2.png"></a>
         </div>
     </div>
 </header>
 <body>
-    
+    <div class="container">
+        <div class="alinhemantoLogin">
+            <h2>Login</h2>
+        </div>
+        <div class="campo">
+            <form action="">
+                <div class="alinharCampo">
+                    <div class="alinharP">
+                        <p>Email</p>
+                    </div>
+                    <input
+                        class="digitar email"
+                        required
+                        type="email"
+                    />
+                    <div class="alinharP">
+                        <p>Senha</p>
+                    </div>
+                    <input
+                        class="digitar senha"
+                        required
+                        type="password"
+                    />
+                    <a href="#"></a><button class="botaoLogin" type="submit">Entrar</button>
+                </div>
+            </form>   
+        </div>
+    </div>
 </body>
 </html>
