--- a/SPMG-FrontEnd/HTML/PagAdm.html
+++ b/SPMG-FrontEnd/HTML/PagAdm.html
@@ -35,6 +35,32 @@
                             <input class="fechar" type='image' src="./images/letra-x.png"  onclick="FecharMarcarConsulta();"/>
                         </div>
                     </div>
+                    <div class="container alinharForm">
+                        <form>
+                            <div class="alinharInputForm">
+                                <p>Data da Consulta</p>
+                                <input type="date"/>
+                                <p style="font-weight: bolder;">Prontuario</p>
+                                <select>
+                                    <option value="1">Prontuario1</option>
+                                    <option value="2">Prontuario2</option>
+                                    <option value="3">Prontuario3</option>
+                                </select>
+                                <p style="font-weight: bolder;">Medico</p>
+                                <select>
+                                    <option value="1">Medico1</option>
+                                    <option value="2">Medico2</option>
+                                    <option value="3">Medico3</option>
+                                </select>
+                                <p style="font-weight: bolder;">Situação</p>
+                                <select>
+                                    <option value="1">Situação1</option>
+                                    <option value="2">Situação2</option>
+                                    <option value="3">Situação3</option>
+                                </select>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
 
@@ -70,6 +96,20 @@
                             <h2 class="h2Fechar">Cadastrar Email e Senha</h2>
                             <input class="fechar" type='image' src="./images/letra-x.png"  onclick="FecharCadastrarNovoEmail();"/>
                         </div>
+                    </div>
+                    <div class="container alinharForm">
+                        <form>
+                            <div class="alinharInputForm">
+                                <input type="email" placeholder="Email"/>
+                                <input type="password" placeholder="Senha"/>
+                                <p style="font-weight: bolder;">Tipo Usuario</p>
+                                <select>
+                                    <option value="1">ADM</option>
+                                    <option value="2">Médico</option>
+                                    <option value="3">Prontuario</option>
+                                </select>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -149,24 +189,6 @@
                                 </select>
                             </div>
                         </form>
-                    </div>
-                </div>
-            </div>
-
-
-
-
-
-            <div class="alinharInput">
-                <input class="abrir" type='button' value='Cadastrar novo ADM' onclick="CadastrarNovoADM();"/>
-            </div>
-            <div class="alinharCad">
-                <div id="CadAdm">
-                    <div class="alinhamentoADMFechar">
-                        <div class="alinharFechar">
-                            <h2 class="h2Fechar">Cadastrar novo ADM</h2>
-                            <input class="fechar" type='image' src="./images/letra-x.png"  onclick="FecharCadastrarNovoADM();"/>
-                        </div>
                     </div>
                 </div>
             </div>
