--- a/SPMG-FrontEnd/HTML/PagAdm.html
+++ b/SPMG-FrontEnd/HTML/PagAdm.html
@@ -59,25 +59,10 @@
                                     <option value="3">Situação3</option>
                                 </select>
                             </div>
+                            <div class="alinhasBotão">
+                                <button type="submit">Cadastrar</button>
+                            </div>
                         </form>
-                    </div>
-                </div>
-            </div>
-
-
-
-
-
-            <div class="alinharInput">
-                <input class="abrir" type='button' value='Cancelar Consulta' onclick="CancelarConsulta();"/>
-            </div>
-            <div class="alinharCad">
-                <div id="CancelarConsu">
-                    <div class="alinhamentoADMFechar">
-                        <div class="alinharFechar">
-                            <h2 class="h2Fechar">Cancelar Consulta</h2>
-                            <input class="fechar" type='image' src="./images/letra-x.png"  onclick="FecharCancelarConsulta();"/>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -108,6 +93,9 @@
                                     <option value="2">Médico</option>
                                     <option value="3">Prontuario</option>
                                 </select>
+                            </div>
+                            <div class="alinhasBotão">
+                                <button type="submit">Cadastrar</button>
                             </div>
                         </form>
                     </div>
@@ -152,6 +140,9 @@
                                     <option value="3">Especialidade3</option>
                                 </select>
                             </div>
+                            <div class="alinhasBotão">
+                                <button type="submit">Cadastrar</button>
+                            </div>
                         </form>
                     </div>
                 </div>
@@ -187,6 +178,9 @@
                                     <option value="2">Robssu@gmail.com</option>
                                     <option value="3">Robertu@gmail.com</option>
                                 </select>
+                            </div>
+                            <div class="alinhasBotão">
+                                <button type="submit">Cadastrar</button>
                             </div>
                         </form>
                     </div>
